<resources>
	<string name="app_name">송죽 학사</string>
	<string name="full_name">송죽 학사 v1.6.0 [21]</string>
	<string name="setting_name">설정</string>
	<string name="account_name">계정</string>
	<string name="copyright">Copyright © 2013-2015 KENNYSOFT. All Rights Reserved.</string>
	<string name="ok">확인</string>
	<string name="cancel">취소</string>
	<string name="action_loading">로드 중...</string>
	<string name="action_copy">URL 복사</string>
	<string name="action_refresh">새로고침</string>
	<string name="action_setting">설정</string>
	<string name="action_exit">종료</string>
	<string name="login_error">로그인 실패</string>
	<string name="login_failed">로그인 시도 불가</string>
	<string name="login_failed_message">Wi-Fi 상태를 확인해 주십시오.</string>
	<string name="download_pc_only">PC에서만 지원됩니다.</string>
	<string name="download_unavailable">Android 2.2 이하에서는 파일 다운로드 기능이 지원되지 않습니다.</string>
	<string name="download_starting">다운로드 시작중...</string>
	<string name="drawer_status_0">자동 로그인을 사용하지 않음</string>
	<string name="drawer_status_1">로그인되지 않음</string>
	<string name="drawer_status_2">%s 계정으로 자동 로그인됨</string>
	<string name="drawer_open">내비게이션 드로어 열기</string>
	<string name="drawer_close">내비게이션 드로어 닫기</string>
	<string name="drawer_deleted">삭제됨</string>
	<string name="drawer_undo">실행취소</string>
	<string name="drawer_login_needed">로그인이 필요합니다.</string>
	<string name="quit_ing">[BACK] 버튼을 한번 더 누르면 종료됩니다.</string>
	<string name="preference_information">정보</string>
	<string name="preference_opensource">오픈소스 라이선스</string>
	<string name="preference_update">업데이트 사항</string>
	<string name="preference_link">별점 및 리뷰</string>
	<string name="preference_setting">설정</string>
	<string name="preference_account">계정</string>
	<string name="preference_useZoom">확대/축소 강제 사용</string>
	<string name="preference_useZoom_summary">웹사이트의 확대/축소 콘트롤 요청 무시</string>
	<string name="preference_useFilter">발신 번호 필터 사용</string>
	<string name="preference_useFilter_summary">학교 번호에서 발신된 인증 메시지만 인식</string>
	<string name="preference_restore">메뉴 초기화</string>
	<string name="preference_restore_summary">송죽 학사 기본 메뉴 복원</string>
	<string name="preference_restore_message">기본 메뉴로 복원하시겠습니까?</string>
	<string name="account_userId">아이디</string>
	<string name="account_pwd">비밀번호</string>
	<string name="account_login">로그인</string>
	<string name="account_logout">로그아웃</string>
	<string name="account_useAutoLogin">자동 로그인 사용</string>
	<string name="account_useAutoLogin_summary">%s 계정으로 자동 로그인</string>
	<string name="contact_teacher">교사</string>
	<string name="contact_grade">학년</string>
	<string name="contact_class">반</string>
	<string name="first_title">환영합니다!</string>
	<string name="first_message">
	<b>경기과학고등학교 송죽 학사 접근을 쉽고 빠르게!</b>\n\n
	KENNYSOFT의 \"송죽 학사\" 앱은 계정 정보 기억 및 자동 로그인과 외부 접속시 인증 메시지 자동 입력을 지원하여 경기과학고등학교 송죽 학사 시스템을 간편하게 이용할 수 있도록 도와드립니다.\n\n
	이 앱은 <b>인터넷 접속</b>, <b>휴대전화 상태 및 ID 읽기</b>, <b>SD 카드의 콘텐츠 수정 또는 삭제</b> 및 <b>메시지 받기, 읽기</b> 등의 권한을 가지고 있으며, 모든 소스 코드는 GitHub에서 GPL 라이선스 하에 배포되고 있습니다. 이 앱의 사용에 동의하신다면 동의 버튼을 눌러주세요.
	</string>
	<string name="first_agree">동의</string>
	<string name="first_disagree">거부</string>
	<string name="second_title">감사합니다!</string>
	<string name="second_message">
	<b>설치해 주셔서 감사합니다!</b>\n\n
	계정 정보 기억 및 자동 로그인을 위해서는 다음 화면에서 <b>아아디</b>와 <b>비밀번호</b>를 설정해 주세요.\n\n
	Copyright © 2013-2015 KENNYSOFT. All Rights Reserved.
	</string>
	<string name="information">
	<b>경기과학고등학교 송죽 학사 접근을 쉽고 빠르게!</b>\n\n
	KENNYSOFT의 \"송죽 학사\" 앱은 계정 정보 기억 및 자동 로그인과 외부 접속시 인증 메시지 자동 입력을 지원하여 경기과학고등학교 송죽 학사 시스템을 간편하게 이용할 수 있도록 도와드립니다.\n\n
	Copyright © 2013-2015 KENNYSOFT. All Rights Reserved.
	</string>
	<string name="opensource">
	<b>Student</b>\n
	<i>https://github.com/KENNYSOFT/Student</i>\n\n
GNU GENERAL PUBLIC LICENSE Version 3\n\n
Copyright © 2013-2015 KENNYSOFT\n\n
This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\n
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.\n\n\n
	<b>jsoup</b>\n
	<i>http://jsoup.org</i>\n\n
The MIT License\n\n
Copyright © 2009 - 2013 Jonathan Hedley (jonathan@hedley.net)\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n\n
	<b>android-swipe-to-dismiss-undo</b>\n
	<i>https://github.com/hudomju/android-swipe-to-dismiss-undo</i>\n\n
The MIT License\n\n
Copyright (c) 2014 Hugo Doménech Juárez\n\n
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n
The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n\n
	<b>Android Open Source Project</b>\n
	<i>http://source.android.com</i>\n\n
Apache License Version 2.0\n\n
Copyright (C) 2015 The Android Open Source Project\n\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n
&#160;&#160;&#160;&#160;http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
	</string>
</resources>