<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:key="Setting" >
	<PreferenceCategory
		android:key="information"
		android:title="@string/preference_information" >
		<Preference
			android:key="about"
			android:title="@string/full_name"
			android:summary="@string/copyright" />
		<Preference
		    android:key="update"
		    android:title="@string/preference_update" />
		<Preference 
			android:key="link"
			android:title="@string/preference_link" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="setting"
		android:title="@string/preference_setting" >
		<CheckBoxPreference
		    android:key="useZoom"
		    android:title="@string/preference_useZoom"
		    android:summary="@string/preference_useZoom_summary" />
		<CheckBoxPreference
		    android:key="useFilter"
		    android:title="@string/preference_useFilter"
		    android:summary="@string/preference_useFilter_summary"
		    android:defaultValue="true" />
		<Preference
		    android:key="account"
		    android:title="@string/preference_account" />
	</PreferenceCategory>
</PreferenceScreen>